<resources>
    <string name="menu_bottom_capture">Capture</string>
    <string name="menu_bottom_smartphone">Phone</string>
    <string name="menu_bottom_smartwatch">Watch</string>
    <string name="menu_bottom_timetool">TimeTool</string>
    <string name="menu_bottom_archive">Archive</string>
    <string name="util_time_format">HH:mm:ss.SSS</string>
    <string name="util_time_format_file">yyyyMMdd_HHmmss</string>
    <string name="util_image_description">image</string>
    <string name="util_wear_package">com.google.android.wearable.app</string>
    <string name="util_exit_app_message">Press again to exit app</string>
    <string name="menu_action_ntp">NTP Synchronization</string>
    <string name="menu_action_wear">Watch Synchronization</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_clear">Clear Data</string>
    <string name="menu_action_about">About</string>
    <string name="menu_device_frequencies">Sensor Frequencies</string>
    <string name="menu_device_reset">Reset to Defaults</string>
    <string name="settings_title">Settings</string>
    <string name="settings_ntp_pool_server_hint">NTP Pool Server</string>
    <string name="settings_enable_sound">Enable Sound</string>
    <string name="settings_enable_vibration">Enable Vibration</string>
    <string name="settings_enable_60s_alert">Enable Alert (1 min)</string>
    <string name="settings_countdown_start">Countdown Start</string>
    <string name="settings_countdown_start_3s">3s</string>
    <string name="settings_countdown_start_10s">10s</string>
    <string name="settings_sensor_file_type">Sensor File Type</string>
    <string name="settings_sensor_file_type_binary">Binary</string>
    <string name="settings_sensor_file_type_csv">CSV</string>
    <string name="settings_timetool_fps">TimeTool QRCode FPS</string>
    <string-array name="ntp_pools">
        <item>pool.ntp.br</item>
        <item>time.google.com</item>
        <item>time.apple.com</item>
        <item>br.pool.ntp.org</item>
    </string-array>
    <string name="about_text">The sensorcap is a free scientific tool for sensor data capture generated by the phone and watch devices.</string>
    <string name="about_button_source_code">Get Source Code</string>
    <string name="about_developers">This app is a creation of the <a href="http://www.ssig.dcc.ufmg.br">SSIG</a>, developed by <a href="https://github.com/acnazarejr">acnazarejr</a>, <a href="https://github.com/davibeltrao">davibeltrao</a> and <a href="https://github.com/vitorcezli">vitorcezli</a>.</string>
    <string name="button_try_again">Try Again</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_tap_to_retry">Tap to retry</string>
    <string name="button_start">Start</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_save">Save</string>
    <string name="button_done">Done</string>
    <string name="button_ok">OK</string>
    <string name="button_apply">Apply</string>
    <string name="permissions_dialog_failed_title">Permissions Denied</string>
    <string name="permissions_dialog_failed_content">You must provide all permissions for this application to work properly.</string>
    <string name="permissions_button_exit_app">Exit App</string>
    <string name="ntp_dialog_synchronization_while_title">NTP Synchronization</string>
    <string name="ntp_dialog_synchronization_while_content">Synchronizing NTP Service with</string>
    <string name="ntp_dialog_already_synchronized_error_title">NTP Synchronized</string>
    <string name="ntp_dialog_already_synchronized_error_content">The NTP Service is already synchronized.</string>
    <string name="ntp_dialog_network_error_title">Network Error</string>
    <string name="ntp_dialog_network_error_content">No internet connections found.</string>
    <string name="ntp_dialog_timeout_error_title">Synchronization Timeout</string>
    <string name="ntp_dialog_timeout_error_content">A synchronization timeout is reached.</string>
    <string name="ntp_dialog_synchronization_error_title">NTP Error</string>
    <string name="ntp_dialog_synchronization_error_content_prefix">Error while NTP synchronizing:</string>
    <string name="ntp_dialog_unknown_error_title">Unknown Error</string>
    <string name="ntp_dialog_unknown_error_content">A unknown error has occurred:</string>
    <string name="ntp_toast_synchronization_success">NTP successfully synchronized</string>
    <string name="wear_dialog_connection_while_title">Watch Connection</string>
    <string name="wear_dialog_connection_while_content">Find paired and connected watch devices.</string>
    <string name="wear_dialog_already_connected_error_title">Watch Connected</string>
    <string name="wear_dialog_already_connected_error_content">A watch device is already connected.</string>
    <string name="wear_dialog_wearos_error_title">Wear OS Error</string>
    <string name="wear_dialog_wearos_error_content">The Android Wear OS App is not installed. Please, install it.</string>
    <string name="wear_dialog_wearos_error_button">Install Wear OS</string>
    <string name="wear_dialog_bluetooth_error_title">Bluetooth Error</string>
    <string name="wear_dialog_bluetooth_error_content">No bluetooth connections found.</string>
    <string name="wear_dialog_no_paired_error_title">Nearby Paired Devices</string>
    <string name="wear_dialog_no_paired_error_content">No nearby watch paired or connected devices with this device. Only bluetooth connections is allowed.</string>
    <string name="wear_dialog_no_capable_error_title">Nearby Capable Devices </string>
    <string name="wear_dialog_no_capable_error_content">No nearby watch capable devices with SensorCap app installed or running. Only bluetooth connections is allowed.</string>
    <string name="wear_dialog_timeout_error_title">Connection Timeout</string>
    <string name="wear_dialog_timeout_error_content">A connection timeout is reached.</string>
    <string name="wear_dialog_no_deviceinfo_error_title">Device Info</string>
    <string name="wear_dialog_no_deviceinfo_error_content">A unknown error has occurred during the watch device info requesting.</string>
    <string name="wear_dialog_unknown_error_title">Unknown Error</string>
    <string name="wear_dialog_unknown_error_prefix_content">A unknown error has occurred:</string>
    <string name="wear_toast_connection_success">Watch successfully connected</string>
    <string name="dialog_clear_data_title">Clear Data?</string>
    <string name="dialog_clear_data_content">All unclosed captures will be removed! The closed captures will be kept in the archive. Confirm?</string>
    <string name="dialog_clear_data_toast">Unclosed captures successfully deleted</string>
    <string name="devices_device_info_title">Device Details</string>
    <string name="devices_device_uuid">Device UUID</string>
    <string name="devices_device_version">Android version</string>
    <string name="devices_device_api">API</string>
    <string name="devices_device_sensors_title">Available Sensors</string>
    <string name="devices_device_sensors_button_global_frequency">Frequency</string>
    <string name="devices_device_sensors_text_explanation">Click to view sensor details or a long click to enable and disable sensor. Red sensors are not available in this device.</string>
    <string name="devices_sensor_details_model">Model</string>
    <string name="devices_sensor_details_version">Version</string>
    <string name="devices_sensor_details_power">Power</string>
    <string name="devices_sensor_details_vendor">Vendor</string>
    <string name="devices_sensor_details_report_mode">Mode</string>
    <string name="devices_sensor_details_max_range">Max. Range</string>
    <string name="devices_sensor_details_resolution">Resolution</string>
    <string name="devices_sensor_details_frequency">Capture Sensor Frequency</string>
    <string name="devices_sensor_details_frequency_global">The capture sensor frequency was set globally.</string>
    <string name="devices_sensor_details_frequency_not_available">Not Available</string>
    <string name="devices_dialog_frequency_title">Sensors Frequencies</string>
    <string name="devices_dialog_frequency_content">Set the sensors capture frequencies.</string>
    <string name="devices_dialog_frequency_basic">Basic Configuration</string>
    <string name="devices_dialog_frequency_advanced">Advanced Configuration</string>
    <string name="devices_dialog_frequency_minimum">Minimum </string>
    <string name="devices_dialog_frequency_low">Low (25%)</string>
    <string name="devices_dialog_frequency_medium">Medium (50%)</string>
    <string name="devices_dialog_frequency_high">High (90%)</string>
    <string name="devices_dialog_frequency_maximum">Maximum (default)</string>
    <string name="devices_dialog_frequency_individual">By sensor</string>
    <string name="devices_dialog_frequency_individual_explanation">Each sensor frequency should be configured individually, on sensor details section.</string>
    <string name="devices_dialog_frequency_global">Custom global frequency</string>
    <string name="devices_dialog_frequency_global_explanation">The sensors with low frequency will be limited to its max frequency.</string>
    <string name="devices_dialog_frequency_global_5hz">5 Hz</string>
    <string name="devices_dialog_frequency_global_200_hz">200 Hz</string>
    <string name="smartwatch_disconnected_title">No Watch Device Connected</string>
    <string name="smartwatch_disconnected_content">No devices paired or connected. Please open the Wear OS App and connect to a watch device with SensorCap installed.</string>
    <string name="timetool_initial_message">Click on the play button to start the QRCode generation.</string>
    <string name="timetool_timestamp_ntp_mode">NTP Mode</string>
    <string name="timetool_timestamp_device_mode">Device Mode</string>
    <string name="timetool_ntp_not_initialized_title">NTP Not Available</string>
    <string name="timetool_ntp_not_initialized_message">The NTP Service is not synchronized.</string>
    <string name="timetool_dummy_hour">--:--:--.--</string>
    <string name="timetool_dummy_value">----------</string>
    <string name="timetool_dialog_device_alert_title">Device Mode</string>
    <string name="timetool_dialog_device_alert_content">The Device mode is selected. The NTP mode is more reliable. Do you want to continue anyway?</string>
    <string name="capture_title">Capture Info</string>
    <string name="capture_button_more_details">More Details</string>
    <string name="capture_name_hint">Capture Name</string>
    <string name="capture_smartphone_position">Phone Position</string>
    <string name="capture_smartphone_side">Phone Side</string>
    <string name="capture_smartwatch_side">Watch Side</string>
    <string name="capture_subject_name_hint">Subject Name</string>
    <string name="capture_gender_female">Female</string>
    <string name="capture_gender_male">Male</string>
    <string name="capture_age_title">Age</string>
    <string name="capture_height_title">Height (cm)</string>
    <string name="capture_weight_title">Weight (Kg)</string>
    <string name="capture_dialog_ntp_alert_title">NTP Synchronization</string>
    <string name="capture_dialog_ntp_alert_content">The NTP is not synchronized. Do you want to continue anyway?</string>
    <string name="capture_dialog_wear_alert_title">Watch Connection</string>
    <string name="capture_dialog_wear_alert_content">No devices paired or connected. Do you want to continue anyway?</string>
    <string name="capture_slide_to_stop">Slide to Stop</string>
    <string name="capture_dialog_details_title">More Details</string>
    <string name="archive_empty_title">No Captures</string>
    <string name="archive_empty_content">Closed and unclosed captures appear here.</string>
</resources>