<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_ntp"
        android:icon="@drawable/ic_ntp_off"
        android:orderInCategory="100"
        android:title="@string/menu_action_ntp"
        app:showAsAction="always" tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/action_wear"
        android:icon="@drawable/ic_smartwatch_off"
        android:orderInCategory="150"
        android:title="@string/menu_action_wear"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="200"
        android:title="@string/menu_action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="250"
        android:title="@string/menu_action_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:orderInCategory="300"
        android:title="@string/menu_action_about"
        app:showAsAction="never" />


</menu>
