<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
            android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_margin="@dimen/spacing_mxlarge"
        android:tint="@color/colorGreyMediumLight"
        android:src="@drawable/ic_smartwatch_off"
        android:contentDescription="@string/util_image_description"/>

    <TextView
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smartwatch_disconnected_title"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
            android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:textAlignment="center"
        android:text="@string/smartwatch_disconnected_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorGrey" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/layout_smartwatch_error_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:text="@string/button_try_again"
        android:background="@drawable/shape_rounded"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white" />

</LinearLayout>

