<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_margin="@dimen/spacing_mxlarge"
        android:tint="@color/colorGreyMediumLight"
        android:src="@drawable/ic_package_close"
        android:contentDescription="@string/util_image_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/archive_empty_title"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:textAlignment="center"
        android:text="@string/archive_empty_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorGrey" />

</LinearLayout>