<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/spacing_middle"
    android:layout_marginLeft="@dimen/spacing_middle"
    android:layout_marginRight="@dimen/spacing_middle"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_middle"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/devices_device_info_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_middle"/>

        <TextView
            android:id="@+id/device_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            android:textColor="@color/colorGrey" />


        <TextView
            android:id="@+id/device_manufacturer_model_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorGrey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/devices_device_version"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorGrey"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/android_version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/devices_device_api"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorGrey"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/android_api_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/devices_device_uuid"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorGrey"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/device_uuid_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>